# Iris

./: .gitmodules  CMakeLists.txt
shaders/: axis.vs  default.fs  default.vs  light.fs  light.vs
src/: Core.cpp  Core.hpp  EBO.cpp  EBO.hpp  Light.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  RenderObject.cpp  RenderObject.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  Vertex.hpp  Window.hpp  main.cpp
src/backend/: EBO.cpp  EBO.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp
src/camera/: Camera.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
